# cvpr2015-opensfm

./: .gitignore  Vagrantfile
Data/: README.md
Data/CLIF_2007/: README.md
Data/CLIF_2007/pos/: 000000-100006.txt  000000-100007.txt  000000-100008.txt  000000-100009.txt  000000-100010.txt  000000-100011.txt  000000-100012.txt  000000-100013.txt  000000-100014.txt  000000-100015.txt  000000-100016.txt  000000-100017.txt  000000-100018.txt  000000-100019.txt  000000-100020.txt  000000-100021.txt  000000-100022.txt  000000-100023.txt  000000-100024.txt  000000-100025.txt  000000-100026.txt  000000-100027.txt  000000-100028.txt  000000-100029.txt  000000-100030.txt  000000-100031.txt  000000-100032.txt  000000-100033.txt  000000-100034.txt  000000-100035.txt  000000-100036.txt  000000-100037.txt  000000-100038.txt  000000-100039.txt  000000-100040.txt  000000-100041.txt  000000-100042.txt  000000-100043.txt  000000-100044.txt  000000-100045.txt  (+209 more)
Data/Castle/: cloud_and_poses.ply  sfm_data.baf
Data/Castle/SfM/matches/: 100_7100.desc  100_7100.feat  100_7101.desc  100_7101.feat  100_7102.desc  100_7102.feat  100_7103.desc  100_7103.feat  100_7104.desc  100_7104.feat  100_7105.desc  100_7105.feat  100_7106.desc  100_7106.feat  100_7107.desc  100_7107.feat  100_7108.desc  100_7108.feat  100_7109.desc  100_7109.feat  100_7110.desc  100_7110.feat  geometric_matches  image_describer.json  matches.e.txt  matches.f.txt  matches.putative.txt  putative_matches  sfm_data.json
Data/MirebeauStHilaireStatue/: cloud_and_poses.ply
Data/MirebeauStHilaireStatue/SfM/matches/: DPP_0001.desc  (+49 more)
Data/MirebeauStHilaireStatue/images/: Readme.md
Data/PoitiersCathedralMainEntranceDoor/: cloud_and_poses.ply
Data/PoitiersCathedralMainEntranceDoor/images/: Readme.md
Data/curve_fitting/: curve_fitting_data1.txt  curve_fitting_data2.txt
Examples/: README.md
Examples/2_view_geometry/: CMakeLists.txt  README
Examples/2_view_geometry/src/: orb_detector.cpp  orb_matcher.cpp
Examples/gtsam/: .cproject  .project  CMakeLists.txt  CameraResectioning.cpp  README.md
Exercises/ceres/: CMakeLists.txt  ba_file.cc  ba_file.h  bundle_adjuster.cc  curve_fitting.cc  read_matrix.cc  read_matrix.h  reprojection_error.h
Exercises/gtsam/: .cproject  .gitignore  .project  CameraResectioning.cpp  SFMExample.cpp
Exercises/maptk/: README.md  clif_analyze.conf  clif_ba.conf  clif_frames.txt  clif_track.conf
Exercises/maptk/results/: clif.blend  clif_homog.txt  clif_track_stats.txt  clif_tracks.txt
Exercises/openMVG/0_ImageListing/: script.sh
Exercises/openMVG/0_ImageListingAndImageMatching/: script.sh
Exercises/openMVG/1_ImageMatching/: script.sh
Exercises/openMVG/1_IncrementalSfM/: script.sh
Exercises/openMVG/2_GlobalSfM/: script.sh
Exercises/openMVG/3_FromCameraPosesToStructure/: script.sh
Exercises/openMVG/4_FromCameraPosesToStructure/: sfm_data.json
Exercises/openMVG/5_GlobalSfM_On_OtherDatasets/: script.sh
Exercises/openMVG/6_codingWithOpenMVG/: CMakeLists.txt  main.cpp  script.sh
VM/: README.md  bootstrap.sh  install_packages.sh  software_setup.sh  user_setup.sh
(+198 files in other folders)
